// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioField should render correctly 1`] = `
<DocumentFragment>
  .cache-1kn1qsx {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-1kn1qsx[aria-disabled='false'],
.cache-1kn1qsx[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-1kn1qsx:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1kn1qsx:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #eeeeff;
}

.cache-1kn1qsx:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1kn1qsx:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #ffe1e7;
}

.cache-1kn1qsx[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1kn1qsx[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-1kn1qsx[aria-disabled='true'] .ehkrmld2 {
  fill: #c4c9d6;
}

.cache-1kn1qsx[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #f6f6f8;
}

.cache-ifm9tt {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-ifm9tt+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-ifm9tt:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-ifm9tt:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #4f0599;
}

.cache-ifm9tt[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #a6102d;
}

.cache-ifm9tt:focus+.ehkrmld2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-ifm9tt:focus+.ehkrmld2 .ehkrmld4 {
  fill: #eeeeff;
}

.cache-ifm9tt[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-ifm9tt[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ffe1e7;
}

.cache-1k96non {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-1k96non .ehkrmld4 {
  fill: #ffffff;
}

.cache-1e98oqk {
  fill: #ffffff;
}

<form
    novalidate=""
  >
    <div
      aria-disabled="false"
      class="cache-1kn1qsx ehkrmld0"
      data-checked="false"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="cache-ifm9tt ehkrmld1"
        id="test-test"
        name="test"
        type="radio"
        value="test"
      />
      <svg
        class="cache-1k96non ehkrmld2"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="8"
            stroke-width="2"
          />
          <circle
            class="cache-1e98oqk ehkrmld4"
            cx="12"
            cy="12"
            r="6"
          />
          <circle
            class="cache-0 ehkrmld3"
            cx="12"
            cy="12"
            r="4"
          />
        </g>
      </svg>
      <label
        for="test-test"
      >
        Radio field
      </label>
    </div>
  </form>
</DocumentFragment>
`;

exports[`RadioField should render correctly checked 1`] = `
<DocumentFragment>
  .cache-1kn1qsx {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-1kn1qsx[aria-disabled='false'],
.cache-1kn1qsx[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-1kn1qsx:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1kn1qsx:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #eeeeff;
}

.cache-1kn1qsx:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1kn1qsx:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #ffe1e7;
}

.cache-1kn1qsx[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1kn1qsx[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-1kn1qsx[aria-disabled='true'] .ehkrmld2 {
  fill: #c4c9d6;
}

.cache-1kn1qsx[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #f6f6f8;
}

.cache-ifm9tt {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-ifm9tt+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-ifm9tt:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-ifm9tt:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #4f0599;
}

.cache-ifm9tt[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #a6102d;
}

.cache-ifm9tt:focus+.ehkrmld2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-ifm9tt:focus+.ehkrmld2 .ehkrmld4 {
  fill: #eeeeff;
}

.cache-ifm9tt[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-ifm9tt[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ffe1e7;
}

.cache-1k96non {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-1k96non .ehkrmld4 {
  fill: #ffffff;
}

.cache-1e98oqk {
  fill: #ffffff;
}

<form
    novalidate=""
  >
    <div
      aria-disabled="false"
      class="cache-1kn1qsx ehkrmld0"
      data-checked="true"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        checked=""
        class="cache-ifm9tt ehkrmld1"
        id="test-checked"
        name="test"
        type="radio"
        value="checked"
      />
      <svg
        class="cache-1k96non ehkrmld2"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="8"
            stroke-width="2"
          />
          <circle
            class="cache-1e98oqk ehkrmld4"
            cx="12"
            cy="12"
            r="6"
          />
          <circle
            class="cache-0 ehkrmld3"
            cx="12"
            cy="12"
            r="4"
          />
        </g>
      </svg>
      <label
        for="test-checked"
      >
        Radio field checked
      </label>
    </div>
  </form>
</DocumentFragment>
`;

exports[`RadioField should render correctly disabled 1`] = `
<DocumentFragment>
  .cache-1kn1qsx {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-1kn1qsx[aria-disabled='false'],
.cache-1kn1qsx[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-1kn1qsx:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1kn1qsx:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #eeeeff;
}

.cache-1kn1qsx:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1kn1qsx:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #ffe1e7;
}

.cache-1kn1qsx[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1kn1qsx[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-1kn1qsx[aria-disabled='true'] .ehkrmld2 {
  fill: #c4c9d6;
}

.cache-1kn1qsx[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #f6f6f8;
}

.cache-ifm9tt {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-ifm9tt+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-ifm9tt:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-ifm9tt:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #4f0599;
}

.cache-ifm9tt[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #a6102d;
}

.cache-ifm9tt:focus+.ehkrmld2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-ifm9tt:focus+.ehkrmld2 .ehkrmld4 {
  fill: #eeeeff;
}

.cache-ifm9tt[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-ifm9tt[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ffe1e7;
}

.cache-1k96non {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-1k96non .ehkrmld4 {
  fill: #ffffff;
}

.cache-1e98oqk {
  fill: #ffffff;
}

<form
    novalidate=""
  >
    <div
      aria-disabled="true"
      class="cache-1kn1qsx ehkrmld0"
      data-checked="false"
    >
      <input
        aria-disabled="true"
        aria-invalid="false"
        class="cache-ifm9tt ehkrmld1"
        disabled=""
        id="test-disabled"
        name="test"
        type="radio"
        value="disabled"
      />
      <svg
        class="cache-1k96non ehkrmld2"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="8"
            stroke-width="2"
          />
          <circle
            class="cache-1e98oqk ehkrmld4"
            cx="12"
            cy="12"
            r="6"
          />
          <circle
            class="cache-0 ehkrmld3"
            cx="12"
            cy="12"
            r="4"
          />
        </g>
      </svg>
      <label
        for="test-disabled"
      >
        Radio field disabled
      </label>
    </div>
  </form>
</DocumentFragment>
`;

exports[`RadioField should trigger events correctly 1`] = `
<DocumentFragment>
  .cache-1kn1qsx {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-1kn1qsx[aria-disabled='false'],
.cache-1kn1qsx[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-1kn1qsx:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1kn1qsx:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #eeeeff;
}

.cache-1kn1qsx:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1kn1qsx:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #ffe1e7;
}

.cache-1kn1qsx[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1kn1qsx[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-1kn1qsx[aria-disabled='true'] .ehkrmld2 {
  fill: #c4c9d6;
}

.cache-1kn1qsx[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #f6f6f8;
}

.cache-ifm9tt {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-ifm9tt+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-ifm9tt:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-ifm9tt:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #4f0599;
}

.cache-ifm9tt[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #a6102d;
}

.cache-ifm9tt:focus+.ehkrmld2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-ifm9tt:focus+.ehkrmld2 .ehkrmld4 {
  fill: #eeeeff;
}

.cache-ifm9tt[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-ifm9tt[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ffe1e7;
}

.cache-1k96non {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-1k96non .ehkrmld4 {
  fill: #ffffff;
}

.cache-1e98oqk {
  fill: #ffffff;
}

<form
    novalidate=""
  >
    <div
      aria-disabled="false"
      class="cache-1kn1qsx ehkrmld0"
      data-checked="true"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="cache-ifm9tt ehkrmld1"
        id="test-events"
        name="test"
        type="radio"
        value="events"
      />
      <svg
        class="cache-1k96non ehkrmld2"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="8"
            stroke-width="2"
          />
          <circle
            class="cache-1e98oqk ehkrmld4"
            cx="12"
            cy="12"
            r="6"
          />
          <circle
            class="cache-0 ehkrmld3"
            cx="12"
            cy="12"
            r="4"
          />
        </g>
      </svg>
      <label
        for="test-events"
      >
        Radio field events
      </label>
    </div>
  </form>
</DocumentFragment>
`;
